--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-
-# Build outputs
-dist/
-build/
-*.local
 
 # Environment variables
 .env
@@ -16,6 +10,11 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Build output
+dist/
+build/
+.vite/
 
 # IDE
 .vscode/
@@ -29,8 +28,15 @@ build/
 coverage/
 .nyc_output/
 
-# Misc
+# Logs
+logs/
 *.log
-.cache/
-.temp/
 
+# Temporary files
+*.tmp
+.temp/
+.cache/
+
+# OS
+Thumbs.db
+.DS_Store
