--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-chartjs-2": "^5.2.0",
     "lucide-react": "^0.294.0",
     "date-fns": "^2.30.0",
-    "framer-motion": "^10.16.0"
+    "framer-motion": "^10.16.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
